--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h2>Meet Our Team</h2>
         <div class="members-container">
             <div class="member">
-                <img src="Student.jpg" alt="Student">
+                <img src="IMG_4367.jpg" alt="Student">
                 <h3>Student</h3>
                 <p>President</p>
             </div>
