--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h2>Meet Our Team</h2>
         <div class="members-container">
             <div class="member">
-                <img src="IMG_4367.jpg" alt="Student">
+                <img src="stee.jpg" alt="Student">
                 <h3>Student</h3>
                 <p>President</p>
             </div>
@@ -51,7 +51,7 @@
                 <p>Treasurer</p>
             </div>
             <div class="member">
-                <img src="IMG_4367.jpg" alt="Abdulaziz Alqahtani">
+                <img src="stu1.jpg" alt="Abdulaziz Alqahtani">
                 <h3>Abdulaziz Alqahtani</h3>
                 <p>Member</p>
             </div>
