--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <p>Treasurer</p>
             </div>
             <div class="member">
-                <img src="stu1.jpg" alt="Abdulaziz Alqahtani">
+                <img src="stu1.JPG" alt="Abdulaziz Alqahtani">
                 <h3>Abdulaziz Alqahtani</h3>
                 <p>Member</p>
             </div>
