--- a/index.html
+++ b/index.html
@@ -13,77 +13,77 @@
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#vision">Our Vision</a></li>
                 <li><a href="#members">Members</a></li>
-                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
         <div class="header-content">
             <h1>Tuwaiq</h1>
-            <p class="tagline">From student to student</p>
         </div>
     </header>
     
     <section id="about">
         <h2>About Us</h2>
-        <p>Our mission is to make positive changes...</p>
+        <p>Welcome to the Student Council of Prince Mohammed bin Fahd University (PMU)!
+
+            At PMU, the Student Council represents the voice of the student body, dedicated to enhancing student life and fostering an inclusive, engaging campus environment. We work closely with students and the university administration to ensure that student concerns, ideas, and initiatives are heard and addressed, empowering every student to make the most of their university experience.</p>
     </section>
 
     <section id="vision" class="fade-in">
         <h2>Our Vision</h2>
-        <p>Our vision is to [Your Vision Statement]. We believe in inclusivity, leadership, and positive change for all students.</p>
+        <p>We envision a university where every student feels empowered to contribute to their community. Through our efforts, we aim to inspire a sense of belonging and responsibility, fostering a dynamic campus culture that reflects the diversity and aspirations of all PMU students.</p>
     </section>
 
     <section id="members" class="fade-in">
         <h2>Meet Our Team</h2>
         <div class="members-container">
             <div class="member">
-                <img src="stee.jpg" alt="Student">
-                <h3>Student</h3>
+                <img src="43741.jpg" alt="Student">
+                <h3>Waleed Alanazi</h3>
                 <p>President</p>
             </div>
             <div class="member">
-                <img src="member2.jpg" alt="Student">
-                <h3>Student Name</h3>
+                <img src="43705.jpg" alt="Student">
+                <h3>Saleh Alratimah</h3>
                 <p>Vice President</p>
             </div>
             <div class="member">
-                <img src="member3.jpg" alt="Student">
-                <h3>Student Name</h3>
+                <img src="431640.jpg" alt="Student">
+                <h3>Qusai Almulla</h3>
                 <p>Treasurer</p>
             </div>
             <div class="member">
-                <img src="stu1.JPG" alt="Abdulaziz Alqahtani">
+                <img src="4364.jpg" alt="Abdulaziz Alqahtani">
                 <h3>Abdulaziz Alqahtani</h3>
-                <p>Member</p>
+                <p>IT Specialist</p>
             </div>
             <div class="member">
-                <img src="member5.jpg" alt="Student">
-                <h3>Student Name</h3>
-                <p>Head of Public Relations</p>
+                <img src="19.jpg" alt="Student">
+                <h3>Turki Alajmi</h3>
+                <p>IT Specialist</p>
             </div>
             <div class="member">
-                <img src="member6.jpg" alt="Student">
-                <h3>Student Name</h3>
-                <p>Community Outreach</p>
+                <img src="8605.jpg" alt="Student">
+                <h3>Mohmmed Aldossari</h3>
+                <p>PR Officer</p>
             </div>
             <div class="member">
-                <img src="member7.jpg" alt="Student">
-                <h3>Student Name</h3>
-                <p>Head of Fundraising</p>
+                <img src="2980.jpg" alt="Student">
+                <h3>Majid Alkhaldi</h3>
+                <p>PR Officer</p>
             </div>
             <div class="member">
-                <img src="member8.jpg" alt="Student">
-                <h3>Student Name</h3>
-                <p>Event Coordinator</p>
+                <img src="43164.jpg" alt="Student">
+                <h3>Abdulaziz Alnuaim</h3>
+                <p>Special Officer</p>
             </div>
             <div class="member">
-                <img src="member9.jpg" alt="Student">
-                <h3>Student Name</h3>
-                <p>Social Media Manager</p>
+                <img src="886.jpg" alt="Student">
+                <h3>Saad Alsubaie</h3>
+                <p>Special Officer</p>
             </div>
             <div class="member">
-                <img src="member10.jpg" alt="Student">
-                <h3>Student Name</h3>
-                <p>Volunteer Coordinator</p>
+                <img src="480.jpg" alt="Student">
+                <h3>Bander alhajri</h3>
+                <p>Special Officer</p>
             </div>
         </div>
     </section>
@@ -91,11 +91,10 @@
     
 
     <section id="testimonials" class="fade-in">
-        <h2>What Students Say</h2>
+        <h2>Get Involved</h2>
         <div class="testimonial-container">
             <div class="testimonial">
-                <p>"This student council has made a huge positive impact on our school life!"</p>
-                <h4>- Student, Senior</h4>
+                <p>"Your participation matters! Whether it’s joining us at events, sharing your ideas, or becoming an active member of the council, we encourage all students to get involved. Together, we can build a campus community that is inclusive, vibrant, and supportive for everyone."</p>
             </div>
         </div>
     </section>
@@ -103,13 +102,14 @@
     <footer>
         <p>&copy; 2024 Tuwaiq. All Rights Reserved.</p>
         <div class="social-icons">
-            <a href="https://facebook.com" target="_blank"><img src="facebook-icon.png" alt="Facebook"></a>
+            <a href="https://Tiktok.com" target="_blank"><img src="Tiktok-icon.png" alt="Facebook"></a>
             <a href="https://twitter.com" target="_blank"><img src="twitter-icon.png" alt="Twitter"></a>
+            <a href="https://instgram.com" target="_blank"><img src="instgram-icon.png" alt="Twitter"></a>
         </div>
         <div class="newsletter">
             <h4>Subscribe to our Newsletter</h4>
             <form action="#">
-                <input type="email" placeholder="Enter your email" required>
+                <input type="email" placeholder="Stdcouncilmale@pmu.edu.sa" required>
                 <button type="submit">Subscribe</button>
             </form>
         </div>
